# qt-logger

./: CMakeLists.txt  logger.cpp  logger.h  loggertypes.h
